--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#contact">CONTACT US</a></li>
             </ul>
         </nav>
-<!---------<img src="images/menu.png" class="menu-icon" onclick="menutoggle()">----------->
+<!------<img src="images/menu.png" class="menu-icon" onclick="menutoggle()">----------->
         <section id="background">
         <div class="container">
             <div class="box">
